# ScribeLoop

./: README.md
opsai-document-orchestrator/: .gitignore  README.md  function_app.py  host.json  local.settings.json.example  pyproject.toml  requirements.txt
opsai-document-orchestrator/config/: pipeline.yaml
opsai-document-orchestrator/src/opsai_document_orchestrator/: __init__.py  cli.py  config.py  factory.py  settings.py
opsai-document-orchestrator/src/opsai_document_orchestrator/clients/: __init__.py  blob_client.py  content_understanding.py
opsai-document-orchestrator/src/opsai_document_orchestrator/models/: __init__.py
opsai-document-orchestrator/src/opsai_document_orchestrator/repositories/: __init__.py  base.py  table_storage.py
opsai-document-orchestrator/src/opsai_document_orchestrator/services/: __init__.py  analyzer_builder.py  document_service.py
opsai-document-orchestrator/tests/: __init__.py  test_config_loading.py  test_document_service.py  test_schema_conversion.py
